<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quanlybanthuocdongy.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_favourite"
            app:destination="@id/nav_favourite" />
        <action
            android:id="@+id/action_nav_home_to_nav_myProfile"
            app:destination="@id/nav_myProfile" />
        <action
            android:id="@+id/action_nav_home_to_nav_history"
            app:destination="@id/nav_update_inf_medicine" />
        <action
            android:id="@+id/action_nav_home_to_nav_changeMyProfile"
            app:destination="@id/nav_changeMyProfile" />
        <action
            android:id="@+id/action_nav_home_to_nav_changePassword"
            app:destination="@id/nav_changePassword" />
        <action
            android:id="@+id/action_nav_home_to_nav_logout"
            app:destination="@id/nav_logout" />
    </fragment>

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.quanlybanthuocdongy.ui.CreateNewMedicineFragment"
        android:label="@string/menu_create_new_medicine"
        tools:layout="@layout/fragment_create_new_medicine" >
        <action
            android:id="@+id/action_nav_favourite_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_update_inf_medicine"
        android:name="com.example.quanlybanthuocdongy.ui.HistoryFragment"
        android:label="@string/menu_update_inf_medicine"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_nav_history_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_myProfile"
        android:name="com.example.quanlybanthuocdongy.ui.MyProfileFragment"
        android:label="@string/menu_myProfile"
        tools:layout="@layout/fragment_myprofile" >
        <action
            android:id="@+id/action_nav_myProfile_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_changeMyProfile"
        android:name="com.example.quanlybanthuocdongy.ui.ChangeMyProfileFragment"
        android:label="@string/menu_change_myprofile"
        tools:layout="@layout/fragment_change_myprofile" >
        <action
            android:id="@+id/action_nav_changeMyProfile_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_changePassword"
        android:name="com.example.quanlybanthuocdongy.ui.ChangePasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_nav_changePassword_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>